# confie

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  cmake.sh  config.toml  config.txt  vcpkg.json
src/: CMakeLists.txt  cli.cpp  cli.hpp  config.cpp  config.hpp  error.cpp  error.hpp  group.cpp  group.hpp  main.cpp  main.cxx  toml.cpp  toml.hpp  yaml.cpp  yaml.hpp
